# Formigometro

./: .gitignore  README.md
Contador/: Manual.md  Readme.md  cvatVideoXmlAnnotation.py  requirements.txt  yoloVideoDetect.py
Contador/cvat/: cvatVideoXmlAnnotation.py
Contador/dataCountline/: Readme.md  countline.py  dataCountline.py
Contador/dataRRANSAC/: CMakeLists.txt  Readme.md  dataRRANSACutils.py  dataRRANSACyml2pkl.py  exemploInput.yml  main.cpp  rransacFrameN.cpp  rransacFrameN.hpp  test_main.cpp
Contador/docker_opencv_gpu/: Dockerfile  Makefile
Contador/imfw/: ViBe.hpp  ViBe_preprocess.hpp  argParse.hpp  bgs_processing.hpp  fsutils.hpp  myrand.h  video.hpp
Contador/otimizadores/: MOTmetrics.py  Readme.md  otmMngr.py  runTasks.py
Contador/otimizadores/testes/: printsecs.py  testTimer.py
Contador/yolo/: Readme.md  yolo_v3_1batch_anchors.cfg  yolov5Detect.py
Contador/yolo_v3/: treino.data
Mila/: otimizacaoRRANSAC.py  tabela_yml.csv
tabela_de_contingencia/: exemplo_LogLinearModels_vitor.html  exemplo_LogLinearModels_vitor.ipynb  exemplo_vitor.r
